<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- APP SETTINGS -->
    <string name="app_name">ESN MobilIT</string>

    <!-- MENU -->
    <string name="action_settings">Action</string>
    <string name="ras_section_settings">Change section</string>

    <!-- ERRORS -->
    <string name="error.message.network">
        Oops, a network error happened.
    </string>
    <string name="error.message.no_data.countries">
        There are no countries or sections in the database.
    </string>

    <!-- INFO -->
    <string name="info.message.no_content">
        There is no content yet.
    </string>
    <string name="info.message.guide.not_displayable">
        The guide has not been created or activated yet.
    </string>
    <string name="info.message.no_network">
        You are not connected to the internet.
    </string>

    <!-- SPLASH SCREEN -->
    <string name="tryingcache">No Internet connection, load from cache ...</string>
    <string name="emptycache">You need to load data at least once with internet</string>
    <string name="loading">Loading please wait …</string>
    <string name="btn_retry">Try again</string>
    <string name="btn_change">Reset section</string>
    <string name="load_survival_end">SurvivalGuide downloaded</string>
    <string name="load_events_end">%1$d events loaded</string>
    <string name="load_news_end">%1$d news loaded</string>
    <string name="load_partners_end">%1$d partners loaded</string>
    <string name="start_homeactivity">Launching app ...</string>
    <string name="noitems">There is no contents for this section, please contact webmaster@esnlille.fr</string>

    <!-- FIRST LAUNCH LAYOUT -->
    <string name="chooseyour">Choose your</string>
    <string name="country">country</string>
    <string name="city">city</string>
    <string name="esnsection">ESN Section</string>
    <string name="and">and</string>
    <string name="start_button">Launch</string>
    <string name="selectyourcountry">Select your country</string>
    <string name="selectyoursection">Select your section</string>

    <!-- Action Bar Title -->
    <string name="menu_drawer_item_news">News</string>
    <string name="menu_drawer_item_events">Events</string>
    <string name="menu_drawer_item_partners">Partners</string>
    <string name="menu_drawer_item_guide">Survival guide</string>
    <string name="menu_drawer_item_about">About</string>
    <string name="menu_drawer_item_reset">Change my section</string>

    <string name="icon_feed">&#xf09e;</string>
    <string name="icon_book">&#xf02d;</string>
    <string name="icon_settings">&#xf013;</string>
    <string name="menu_drawer_item_settings">Settings</string>

</resources>